button mobile and desktop fixes

--- a/src/app-components/StudyMode/_studyComponent.scss
+++ b/src/app-components/StudyMode/_studyComponent.scss
@@ -130,6 +130,10 @@
         }
       }
     }
+    button{
+      padding: 10px 0 !important;
+      font-size: 1.5rem !important;
+    }
   }
 }
 
